--- a/Body.html
+++ b/Body.html
@@ -1,43 +1,177 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>CO2 Emission Tracker</title><link rel="stylesheet" href="style.css"></head>
-    <body>
-        <div class="app-container">
-            <!-- Form Section -->
-            <div class="form-card">
-                <h1>CO<sub>2</sub> Emission Tracker</h1>
-                <form>
-                    <!-- Year Input-->
-                    <label for="year-input" class="input-label">Select Year</label>
-                    <input type="number" id="year-input" name="year" min="2014" max="2024" placeholder="YYYY" class="rounded-input" required>
-                    <!-- State/UT Dropdown -->
-                    <label for="state-dropdown" class="input-label">Select State/UT</label>
-                    <select id="state-dropdown" name="state" class="dropdown rounded-input">
-                        <option value="">Select State/Union Territory</option>
-                        <!-- States will be populated by JavaScript -->
-                    </select>
-                    <!-- Button -->
-                    <button type="button" id="submit-button" class="submit-btn">Track</button>
-                </form>
-            </div>
-            <!-- Output Section-->
-            <div id="state-output-container" class="output-card" style="display:none">
-                <div class="state-output">
-                    <img id="state-image" src="" alt="State/UT">
-                    <div id="state-name" class="state-name"></div>
-                    <div id="state-co2" class="state-co2"></div>
-                    <div id="co2-value"></div>
-                </div>
-            </div>
-            <!-- Carousel Section -->
-            <div class="carousel-container" id="carousel-container" style="display: none;">
-                <div class="carousel" id="carousel"></div>
-            </div>
-            <!-- Prediction Button -->
-            <button id="future-button" class="submit-btn">Predict CO2 Emissions</button>
-        </div>
-        <!-- Link to the JS file -->
-        <script src="script.js"></script>
-        </body>
-        </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CO₂ Prediction | Rushi & Aniket</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background: linear-gradient(to right, lavender, #f0e6ff);
+      color: #2c3e50;
+      text-align: center;
+      margin: 0;
+    }
+
+    .back-button {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      padding: 10px 20px;
+      background-color: #ff5733;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s;
+      z-index: 999;
+    }
+
+    .back-button:hover {
+      background-color: #e63e00;
+    }
+
+    .carousel-container {
+      overflow: hidden;
+      width: 100%;
+      max-width: 1200px;
+      margin: 30px auto;
+      position: relative;
+    }
+
+    .carousel {
+      display: flex;
+      animation: scroll-left 25s linear infinite;
+    }
+
+    .carousel-item {
+      text-align: center;
+      margin: 0 30px;
+      flex-shrink: 0;
+    }
+
+    .carousel-item img {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 12px;
+      border: 2px solid #ccc;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+      margin-bottom: 10px;
+    }
+
+    .carousel-item div {
+      font-size: 1rem;
+      color: #000;
+      margin-bottom: 5px;
+    }
+
+    @keyframes scroll-left {
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+    #state-output-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 30px;
+    }
+
+    .state-output {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: rgba(255, 255, 255, 0.25);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+      max-width: 600px;
+      width: 100%;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+
+    .state-output img {
+      width: 220px;
+      height: auto;
+      border-radius: 16px;
+      border: 3px solid #4e6bff;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      margin-bottom: 16px;
+    }
+
+    .state-name {
+      font-size: 1.6rem;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .state-co2 {
+      font-size: 1.2rem;
+      margin-top: 10px;
+      color: #555;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: scale(0.96);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  </style>
+</head>
+<body>
+
+
+  <button class="back-button" onclick="window.location.href='index.html'">← Back</button>
+
+  <div class="app-container">
+
+    <div class="form-card">
+      <h1>CO<sub>2</sub> Emission Tracker</h1>
+      <form onsubmit="return false;">
+        <label for="year-input" class="input-label">Select Year</label>
+        <input type="number" id="year-input" name="year" min="2014" max="2025" placeholder="YYYY" class="rounded-input" required />
+
+        <label for="state-dropdown" class="input-label">Select State/UT</label>
+        <select id="state-dropdown" name="state" class="dropdown rounded-input">
+          <option value="">Select State/Union Territory</option>
+        </select>
+
+        <button type="button" id="submit-button" class="submit-btn">Track</button>
+      </form>
+    </div>
+
+
+    <div id="state-output-container" class="output-card" style="display: none;">
+      <div class="state-output">
+        <img id="state-image" src="" alt="State/UT" />
+        <div id="state-name" class="state-name"></div>
+        <div id="state-co2" class="state-co2"></div>
+        <div id="co2-value"></div>
+      </div>
+    </div>
+
+    <!-- Carousel Section -->
+    <div class="carousel-container" id="carousel-container" style="display: none;">
+      <div class="carousel" id="carousel"></div>
+    </div>
+
+    <!-- Predict Button -->
+    <button id="future-button" class="submit-btn">Predict CO2 Emissions</button>
+  </div>
+
+  <!-- Script -->
+  <script src="script.js"></script>
+</body>
+</html>
