--- a/balance.html
+++ b/balance.html
@@ -5,19 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Old Gas Balance | CO₂ Awareness</title>
   <style>
+    :root {
+      --bg-light: linear-gradient(to right, #e8f5e9, #fffde7);
+      --bg-dark: linear-gradient(to right, #1a1a1a, #2b2b2b);
+      --text-light: #333;
+      --text-dark: #eee;
+      --accent-light: #388e3c;
+      --accent-dark: #66bb6a;
+      --button-bg: #4caf50;
+      --button-hover: #2e7d32;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e8f5e9, #fffde7);
-      color: #333;
       margin: 0;
       padding: 0;
+      background: var(--bg-light);
+      color: var(--text-light);
+      transition: background 0.4s ease, color 0.4s ease;
+    }
+
+    body.dark-mode {
+      background: var(--bg-dark);
+      color: var(--text-dark);
     }
 
     header {
-      background-color: #388e3c;
+      background-color: var(--accent-light);
       color: white;
       padding: 30px 20px;
       text-align: center;
+      transition: background-color 0.4s ease;
+    }
+
+    body.dark-mode header {
+      background-color: var(--accent-dark);
     }
 
     header h1 {
@@ -33,8 +55,12 @@
     }
 
     h2 {
-      color: #2e7d32;
+      color: var(--accent-light);
       margin-top: 30px;
+    }
+
+    body.dark-mode h2 {
+      color: var(--accent-dark);
     }
 
     p, li {
@@ -50,25 +76,49 @@
       display: block;
       margin: 50px auto 20px;
       padding: 10px 25px;
-      background-color: #4caf50;
+      background-color: var(--button-bg);
       color: white;
       border: none;
       border-radius: 8px;
       font-size: 1rem;
       cursor: pointer;
-      transition: 0.3s ease;
+      transition: background-color 0.3s ease;
     }
 
     .back-btn:hover {
-      background-color: #2e7d32;
+      background-color: var(--button-hover);
+    }
+
+    .toggle-dark {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 10px 18px;
+      background-color: #607d8b;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      z-index: 1000;
+    }
+
+    .toggle-dark:hover {
+      background-color: #455a64;
     }
   </style>
 </head>
 <body>
+
+  <button class="toggle-dark" onclick="toggleDarkMode()">🌓 Toggle Dark Mode</button>
+
+
   <header>
     <h1>⚖️ Old Gas Balance of the Earth</h1>
   </header>
 
+ 
   <div class="container">
     <p>
       Before industrialization and human interference, Earth’s atmosphere maintained a delicate gas balance that supported life for millions of years. The ratios of oxygen, carbon dioxide, nitrogen, and water vapor were stable, and this equilibrium kept the planet livable and diverse.
@@ -109,5 +159,19 @@
 
     <button class="back-btn" onclick="window.location.href='index.html'">← Back to Home</button>
   </div>
+
+ 
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      if (localStorage.getItem("theme") === "dark") {
+        document.body.classList.add("dark-mode");
+      }
+    });
+
+    function toggleDarkMode() {
+      const isDark = document.body.classList.toggle("dark-mode");
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    }
+  </script>
 </body>
 </html>
